Fixed some layout issues

--- a/grid.css
+++ b/grid.css
@@ -6,8 +6,6 @@
   max-width:1000px;
   padding-left:20px;
   padding-right:20px;
-  padding-top: 20px;
-  padding-bottom: 20px;
   margin-left:auto;
   margin-right:auto;
 }
@@ -27,6 +25,7 @@
   padding-left: 2.08333333333333%;
   padding-right: 2.08333333333333%;
   padding-bottom:20px;
+  padding-top:20px;
   float:left;
 }
 
@@ -37,7 +36,23 @@
 .col-12 {
   width: 100%;
 }
+.col-4, .col-12 {
+  padding-bottom:20px;
+  padding-top:20px;
+}
 }
 video {
-  width: 100%;
+  max-width: 100%;
+  width: auto;
+  height: auto;
+}
+img {
+  max-width: 100%;
+  width: auto;
+  height: auto;
+}
+iframe {
+  max-width: 100%;
+  display: block;
+  margin: auto;
 }
